--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald" rel="stylesheet">
 	<!-- CSS styling -->
-	<!--<link rel=stylesheet href="assets/css/style-min.css" TYPE="text/css">-->
-	<link rel=stylesheet href="assets/css/style-min.css" TYPE="text/css"> 
+	<!--<link type="text/css" rel=stylesheet href="assets/css/style.css">-->
+	<link type="text/css" rel=stylesheet href="assets/css/style-min.css">
 	<!-- Javascript -->
 	<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 	<!--<script type="text/javascript" src="assets/js/custom.js"></script>-->
