Fixing media query plus-box size bug

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald" rel="stylesheet">
 	<!-- CSS styling -->
-	<!--<link type="text/css" rel=stylesheet href="assets/css/style.css">-->
-	<link type="text/css" rel=stylesheet href="assets/css/style-min.css">
+	<link type="text/css" rel=stylesheet href="assets/css/style.css">
+	<!--<link type="text/css" rel=stylesheet href="assets/css/style-min.css">-->
 	<!-- Javascript -->
 	<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 	<!--<script type="text/javascript" src="assets/js/custom.js"></script>-->
@@ -116,7 +116,7 @@
 					</li>
 				</a>
 			</ul>
-			<!--<div id="project-three" class="expandProject">
+			<!--<div id="project-three" class="expand-project">
 				<h1>Amenti</h1>
 				<div class="project-overlay-exit"></div>
 				<span class="break-5vh"></span>
@@ -129,7 +129,7 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/3DBrG2YjqQA" frameborder="0" allowfullscreen></iframe>
 				<span class="break-10vh"></span>	
 			</div>
-			<div id="project-two" class="expandProject">
+			<div id="project-two" class="expand-project">
 				<h1>Zumo</h1>
 				<div class="project-overlay-exit"></div>
 				<span class="break-5vh"></span>	
@@ -142,7 +142,7 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/3DBrG2YjqQA" frameborder="0" allowfullscreen></iframe>
 				<span class="break-10vh"></span>	
 			</div>
-			<div id="project-one" class="expandProject">
+			<div id="project-one" class="expand-project">
 				<h1>Dissertation: Using Virtual Reality for Education</h1>
 				<div class="project-overlay-exit"></div>
 				<span class="break-5vh"></span>	
