CSS background animation + Heritage Forge project

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald" rel="stylesheet">
 	<!-- CSS styling -->
-	<link type="text/css" rel=stylesheet href="assets/css/style.css">
-	<!--<link type="text/css" rel=stylesheet href="assets/css/style-min.css">-->
+	<!--<link type="text/css" rel=stylesheet href="assets/css/style.css">-->
+	<link type="text/css" rel=stylesheet href="assets/css/style-min.css">
 	<!-- Javascript -->
 	<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
 	<!--<script type="text/javascript" src="assets/js/custom.js"></script>-->
@@ -103,13 +103,13 @@
 						<div class="plus-box"></div>
 					</li>
 				</a>
-				<a href="#two">
+				<a href="https://www.youtube.com/watch?v=N1kqBtfwzhA&feature=youtu.be" target="_blank">
 					<li class="port-box" id="two">
 					    <div class="overlay"></div>
 						<div class="plus-box"></div>
 					</li>
 				</a>
-				<a href="https://www.youtube.com/watch?v=N1kqBtfwzhA&feature=youtu.be" target="_blank">
+				<a href="https://www.youtube.com/watch?v=bJvG35SPK6w" target="_blank">
 					<li class="port-box" id="one">
 						<div class="overlay"></div>
 						<div class="plus-box"></div>
