Adding a hireable port-box / Improving font readability

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald" rel="stylesheet">
 	<!-- CSS styling -->
-	<!--<link type="text/css" rel=stylesheet href="assets/css/style.css">-->
-	<link type="text/css" rel=stylesheet href="assets/css/style-min.css">
+	<link type="text/css" rel=stylesheet href="assets/css/style.css">
+	<!--<link type="text/css" rel=stylesheet href="assets/css/style-min.css">-->
 	<!-- Javascript -->
 	<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
-	<!--<script type="text/javascript" src="assets/js/custom.js"></script>-->
-	<script type="text/javascript" src="assets/js/custom-min.js"></script>
+	<script type="text/javascript" src="assets/js/custom.js"></script>
+	<!--<script type="text/javascript" src="assets/js/custom-min.js"></script>-->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-63877265-1"></script>
 	<script>
@@ -116,47 +116,21 @@
 					</li>
 				</a>
 			</ul>
-			<!--<div id="project-three" class="expand-project">
-				<h1>Amenti</h1>
-				<div class="project-overlay-exit"></div>
-				<span class="break-5vh"></span>
-				<ul class="tags">
-					<li>C++</li>
-					<li>OOP</li>
-					<li>Teamwork</li>
-					<li>Problem Solving</li>
-				</ul>
+			<div id="port_expand_box" class="expand-project">
+				<div class="project-box-header">				
+					<h1>Dissertation: Using Virtual Reality for Education</h1>
+					<div class="project-overlay-exit"></div>
+				</div>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/3DBrG2YjqQA" frameborder="0" allowfullscreen></iframe>
-				<span class="break-10vh"></span>	
+				<div class="project-box-footer">	
+					<ul class="tags">
+						<li>Scripting</li>
+						<li>Linear</li>
+						<li>Level Design</li>
+						<li>Virtual Reality</li>
+					</ul>
+				</div>
 			</div>
-			<div id="project-two" class="expand-project">
-				<h1>Zumo</h1>
-				<div class="project-overlay-exit"></div>
-				<span class="break-5vh"></span>	
-				<ul class="tags">
-					<li>C++</li>
-					<li>OOP</li>
-					<li>Game Design</li>
-					<li>Problem Solving</li>
-				</ul>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/3DBrG2YjqQA" frameborder="0" allowfullscreen></iframe>
-				<span class="break-10vh"></span>	
-			</div>
-			<div id="project-one" class="expand-project">
-				<h1>Dissertation: Using Virtual Reality for Education</h1>
-				<div class="project-overlay-exit"></div>
-				<span class="break-5vh"></span>	
-				<ul class="tags">
-					<li>Scripting</li>
-					<li>Linear</li>
-					<li>Level Design</li>
-					<li>Virtual Reality</li>
-				</ul>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/3DBrG2YjqQA" frameborder="0" allowfullscreen></iframe>
-				<span class="break-10vh"></span>	
-			</div>-->
-		</div>
-
 		</br></br></br>
 	</div>
 </body>
