Adding dynamic tags per project

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- CSS styling -->
-	<link type="text/css" rel=stylesheet href="assets/css/style.css">
-	<!--<link type="text/css" rel=stylesheet href="assets/css/style-min.css">-->
+	<!--<link type="text/css" rel=stylesheet href="assets/css/style.css">-->
+	<link type="text/css" rel=stylesheet href="assets/css/style-min.css">
 	<!-- Javascript -->
 	<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="assets/js/custom.js"></script>
-	<!--<script type="text/javascript" src="assets/js/custom-min.js"></script>-->
+	<!--<script type="text/javascript" src="assets/js/custom.js"></script>-->
+	<script type="text/javascript" src="assets/js/custom-min.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-63877265-1"></script>
 	<script>
@@ -98,19 +98,19 @@
 	<div id="portfolio">
 		<div id="portfolio-wrap">
 			<ul id="port-boxes">
-				<a>
+				<a href="#port_expand_box" title="Gameplay Prototype: VR Time Crisis">
 					<li class="port-box" id="three">
 					    <div class="overlay"></div>
 						<div class="plus-box"></div>
 					</li>
 				</a>
-				<a>
+				<a href="#port_expand_box" title="Dissertation: Using Virtual Reality for Education">
 					<li class="port-box" id="two">
 					    <div class="overlay"></div>
 						<div class="plus-box"></div>
 					</li>
 				</a>
-				<a>
+				<a href="#port_expand_box" title="Group Project: VR Blacksmith Simulator">
 					<li class="port-box" id="one">
 						<div class="overlay"></div>
 						<div class="plus-box"></div>
@@ -123,15 +123,11 @@
 					<div class="project-overlay-exit"></div>
 				</div>
 				<div id="project-box-wrap">
-					<iframe id="youtube_video" style="background: #606060;" width="50%" height="315" frameborder="0" float="left" allowfullscreen></iframe>
-					<p id="project-description">Lorem ipsum dolor sit amet, no malis mediocritatem sed, te mea recusabo reprimique, pri movet dictas an. Ut sea brute vitae verear, eu odio nibh aliquid vim, ei adhuc fabulas pri. Ceteros vulputate definiebas per ut. Graeci sapientem eos ex, an diam graeci numquam nam, mei etiam possit dolorem et.</p>
+					<iframe id="project-video" style="background: #606060;" width="50%" height="315" frameborder="0" float="left" allowfullscreen></iframe>
+					<p id="project-description"></p>
 				</div>
 				<div id="project-box-footer">	
-					<ul class="tags">
-						<li>Scripting</li>
-						<li>Linear</li>
-						<li>Level Design</li>
-						<li>Virtual Reality</li>
+					<ul id="tags">
 					</ul>
 				</div>
 			</div>
