Adding robots.txt/sitemap.xml

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- ================================================= -->
-	<!-- Website created by Robert Davis: Copyright © 2018 -->
+	<!-- Website created by Robert Davis: Copyright © 2019 -->
 	<!-- ================================================= -->
 	<meta charset="utf-8" />
 
@@ -15,7 +15,7 @@
 	<meta name="keywords" content="Robert Davis, Rob, Video Games, Developer, Programmer, Portfolio, Games, RobertDavisAdam, UK, British, University of Lincoln, BSc Computer Science, Website, British Computer Society, BCS, computing, internet">
 	<meta name="author" content="Robert Davis">
 	<!--robots data-->
-	<meta name="robots" content="index, follow">
+	<meta name="ROBOTS" content="index, follow">
 	<meta name="mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -50,19 +50,18 @@
 	<link href="https://fonts.googleapis.com/css?family=Droid+Serif|Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- CSS styling -->
-	<!--<link type="text/css" rel=stylesheet href="assets/css/style.css">-->
-	<link type="text/css" rel=stylesheet href="assets/css/style-min.css">
+	<link type="text/css" rel=stylesheet href="assets/css/style.css">
+	<!--<link type="text/css" rel=stylesheet href="assets/css/style-min.css">-->
 	<!-- Javascript -->
 	<script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
-	<!--<script type="text/javascript" src="assets/js/custom.js"></script>-->
-	<script type="text/javascript" src="assets/js/custom-min.js"></script>
+	<script type="text/javascript" src="assets/js/custom.js"></script>
+	<!--<script type="text/javascript" src="assets/js/custom-min.js"></script>-->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-63877265-1"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
-
 	  gtag('config', 'UA-63877265-1');
 	</script>
 </head>
@@ -74,7 +73,7 @@
 			<h1>DAVIS</h1>
 		</a>
 		<span class="break-5vh"></span>
-		<h2>• QA Games Tester at <a href="https://www.rockstargames.com/" target="_blank" title="Rockstar Games website">Rockstar Lincoln. <i class="material-icons">open_in_new</i></a></h2><br>
+		<h2>• QA Games Tester at <a href="https://www.rockstargames.com/" target="_blank" title="Rockstar Games website">Rockstar Games. <i class="material-icons">open_in_new</i></a></h2><br>
 		<h2>• Software developer in <a id="linkLondon" title="Open a map of London">London</a> / <a id="linkLincoln" title="Open a map of Lincoln">Lincoln</a>, UK.</h2> 
 		<div id="expand-box"><div class="overlay" onClick="style.pointerEvents='none'"></div></div>
 		<h2>• First Class BSc (Hons) Computer Science graduate at the <a href="http://www.lincoln.ac.uk/home/course/cmpcmsub/" target="_blank" title="University of Lincoln BSc Computer Science course website">University of Lincoln, UK. <i class="material-icons md-18">open_in_new</i></a></h2>
